--- a/UnitTest/CMakeLists.txt
+++ b/UnitTest/CMakeLists.txt
@@ -7,47 +7,14 @@
 ##****************************************************************************
 cmake_minimum_required(VERSION 3.2)
 
-set(PARENT_PROJECT Ystring)
+set(PARENT_PROJECT Yson)
 project(${PARENT_PROJECT}Test)
-
-add_subdirectory(Ytest)
-
-if(MSVC)
-    set(SOURCE_FILES_PLATFORM_SPECIFIC
-        Utf16/test_Utf16WString.cpp
-        )
-    if(NOT MSVC_VERSION LESS 1900)
-        set(SOURCE_FILES_PLATFORM_SPECIFIC
-            ${SOURCE_FILES_PLATFORM_SPECIFIC}
-            Utf8/test_Utf8StringCpp11.cpp
-            )
-    endif(NOT MSVC_VERSION LESS 1900)
-else(MSVC)
-    set(SOURCE_FILES_PLATFORM_SPECIFIC
-        Utf8/test_Utf8StringCpp11.cpp
-        Utf16/test_Utf16String.cpp
-)
-endif(MSVC)
 
 set(SOURCE_FILES
     main.cpp
-    test_EncodingInfo.cpp
-    Generic/test_Convert.cpp
-    Generic/test_GenericString.cpp
-    Streaming/test_StreamFill.cpp
-    Streaming/test_StreamJoin.cpp
-    Unicode/test_CaseConverter.cpp
-    Unicode/test_CaseInsensitive.cpp
-    Unicode/test_CharClass.cpp
-    Unicode/test_CharMap.cpp
-    Unicode/test_CharMappingTypes.cpp
-    Utf8/test_DecodeUtf8.cpp
-    Utf8/test_EncodeUtf8.cpp
-    Utf8/test_Utf8String.cpp
-    Utf16/test_DecodeUtf16.cpp
-    Utf16/test_EncodeUtf16.cpp
-    Utf32/test_Utf32String.cpp
-    ${SOURCE_FILES_PLATFORM_SPECIFIC}
+    test_JsonTokenizer.cpp
+    test_JsonValue.cpp
+    test_JsonWriter.cpp
     )
 
 add_executable(${PROJECT_NAME}
