Improved JsonWriter. Removed JsonValue.

--- a/UnitTest/CMakeLists.txt
+++ b/UnitTest/CMakeLists.txt
@@ -1,6 +1,6 @@
 ##****************************************************************************
 ## Copyright © 2015 Jan Erik Breimo. All rights reserved.
-## Created by Jan Erik Breimo on 2015-05-31
+## Created by Jan Erik Breimo on 2015-05-31.
 ##
 ## This file is distributed under the Simplified BSD License.
 ## License text is included with the source distribution.
@@ -15,7 +15,6 @@ set(SOURCE_FILES
     test_GetValueType.cpp
     test_JsonReader.cpp
     test_JsonTokenizer.cpp
-    test_JsonValue.cpp
     test_JsonWriter.cpp
     test_ParseDouble.cpp
     )
