Made it possible to interpret 0 and 1 as boolean «false» and «true»
And fixed two embarrassing bugs I found in parseInteger as a result of this.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,7 @@ set(SOURCE_FILES
     Yson/Common/ParseFloatingPoint.hpp
     Yson/Common/ParseInteger.cpp
     Yson/Common/ParseInteger.hpp
+    Yson/Common/SelectTypeIf.hpp
     Yson/Common/StringView.hpp
     Yson/Common/UBJsonValueType.cpp
     Yson/Common/ValueType.cpp
