--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Externals/Ytest"]
-	path = Externals/Ytest
+[submodule "external/Ytest"]
+	path = external/Ytest
 	url = https://jebreimo@github.com/jebreimo/Ytest.git
