Replace Ystring with Yconvert.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@
 ## License text is included with the source distribution.
 ##****************************************************************************
 cmake_minimum_required(VERSION 3.7)
-project(Yson VERSION 1.0.8 LANGUAGES CXX)
+project(Yson VERSION 1.0.9 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 
@@ -36,7 +36,7 @@ add_subdirectory(external/Yconvert)
 
 add_subdirectory(external/Ystring)
 
-configure_file(include/Yson/YsonVersion.hpp.in YsonVersion.hpp @ONLY)
+configure_file(src/Yson/Common/YsonVersion.hpp.in YsonVersion.hpp @ONLY)
 
 add_library(Yson
     include/Yson/DetailedValueType.hpp
@@ -242,10 +242,15 @@ if (YSON_INSTALL)
             ${CMAKE_INSTALL_LIBDIR}/cmake/Yson
         )
 
-    file(GLOB_RECURSE PUBLIC_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp)
+    install(
+        DIRECTORY
+            include/
+        DESTINATION
+            ${CMAKE_INSTALL_INCLUDEDIR}
+    )
+
     install(
         FILES
-            ${PUBLIC_INCLUDES}
             ${CMAKE_CURRENT_BINARY_DIR}/YsonVersion.hpp
         DESTINATION
             ${CMAKE_INSTALL_INCLUDEDIR}/Yson
