--- a/tests/YsonTest/CMakeLists.txt
+++ b/tests/YsonTest/CMakeLists.txt
@@ -29,7 +29,7 @@ add_executable(YsonTest
     test_UBJsonReader.cpp
     test_UBJsonTokenizer.cpp
     test_UBJsonWriter.cpp
-    )
+    test_JsonItem.cpp)
 
 target_include_directories(YsonTest BEFORE
     PRIVATE
