--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -145,7 +145,7 @@ add_library(Yson
     src/Yson/UBJsonWriter/UBJsonWriterUtilities.cpp
     src/Yson/UBJsonWriter/UBJsonWriterUtilities.hpp
     $<TARGET_OBJECTS:Yson_Yconvert>
-    include/Yson/JsonItem.hpp src/Yson/JsonReader/JsonItem.cpp include/Yson/JsonValue.hpp include/Yson/JsonObject.hpp src/Yson/Common/JsonValue.cpp src/Yson/Common/JsonObject.cpp src/Yson/Common/JsonArray.cpp)
+    include/Yson/JsonItem.hpp src/Yson/JsonReader/JsonItem.cpp include/Yson/JsonValue.hpp include/Yson/Object.hpp src/Yson/Common/JsonValue.cpp src/Yson/Common/Object.cpp src/Yson/Common/Array.cpp include/Yson/Value.hpp)
 
 target_compile_definitions(Yson
     PRIVATE
